[tool.poetry]
name = "epsolar-exporter"
version = "0.1.0"
description = ""
authors = ["Florian Berchtold <florian.berchtold@luminartech.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
